<resources>
    <string name="app_name" translatable="false">Agri App</string>
    <string name="english" translatable="false">English</string>
    <string name="marathi" translatable="false">मराठी</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="continue1">Continue</string>
</resources>