<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/en_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/en_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E"
                android:fontFamily="@font/font_bold"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/en_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:fontFamily="@font/font_regular"
                android:layout_toEndOf="@id/en_icon"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mr_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/mr_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="म"
                android:fontFamily="@font/font_bold"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/mr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marathi"
                android:fontFamily="@font/font_regular"
                android:layout_toEndOf="@id/mr_icon"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hi_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/hi_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="हि"
                android:fontFamily="@font/font_bold"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/hi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:fontFamily="@font/font_regular"
                android:layout_toEndOf="@id/hi_icon"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>