<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_backbtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_left_arrow"
            app:tint="@color/text_color"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/mobile_number_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="50dp"
        android:paddingHorizontal="25sp"
        android:paddingTop="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/welcome_to"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/app_name"
                android:textColor="@color/green"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/enter_your_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_regular"
                android:text=""
                android:textColor="@color/text_color"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                android:background="@drawable/btn_outbg"
                android:padding="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/india" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/font_regular"
                    android:text="+91"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/font_regular"
                    android:hint="00000 00000"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@null"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/verify_number_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="50dp"
        android:paddingStart="25sp"
        android:paddingTop="15sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="Welcome to"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/app_name"
                android:textColor="@color/green"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_regular"
                android:text="Verify your number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/otp_send_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_regular"
                android:text="Enter the OTP sent to "
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <com.chaos.view.PinView
                android:id="@+id/otp"
                style="@style/PinWidget.PinView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:cursorVisible="true"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/black"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="40dp"
                app:lineColor="@color/text_color"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:background="@drawable/btn_bg"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:drawableTint="@color/white"
        android:paddingHorizontal="25dp"
        android:text="@string/continue1"
        android:fontFamily="@font/font_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>