<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LangActivity">

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_backbtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_left_arrow"
            app:tint="@color/text_color"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/mobile_number_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="50dp"
        android:paddingHorizontal="25sp"
        android:paddingTop="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="Welcome to"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/app_name"
                android:textColor="@color/green"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_regular"
                android:text="Enter your number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_regular"
                android:text=""
                android:textColor="@color/text_color"
                android:textSize="10sp" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/en_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/en_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="E"
                            android:fontFamily="@font/font_bold"
                            android:layout_marginHorizontal="20dp"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/en_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:fontFamily="@font/font_regular"
                            android:layout_toEndOf="@id/en_icon"
                            android:layout_marginHorizontal="20dp"
                            android:textSize="20sp"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/mr_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/mr_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="म"
                            android:fontFamily="@font/font_bold"
                            android:layout_marginHorizontal="20dp"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/mr_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marathi"
                            android:fontFamily="@font/font_regular"
                            android:layout_toEndOf="@id/mr_icon"
                            android:layout_marginHorizontal="20dp"
                            android:textSize="20sp"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hi_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/hi_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="हि"
                            android:fontFamily="@font/font_bold"
                            android:layout_marginHorizontal="20dp"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/hi_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hindi"
                            android:fontFamily="@font/font_regular"
                            android:layout_toEndOf="@id/hi_icon"
                            android:layout_marginHorizontal="20dp"
                            android:textSize="20sp"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/langContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:background="@drawable/btn_bg"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:drawableTint="@color/white"
        android:paddingHorizontal="25dp"
        android:text="Continue"
        android:fontFamily="@font/font_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>